src/parser/y.output
State 2 conflicts: 1 shift/reduce
State 19 conflicts: 1 shift/reduce
State 26 conflicts: 2 shift/reduce
State 62 conflicts: 3 shift/reduce
State 124 conflicts: 2 shift/reduce
State 125 conflicts: 2 shift/reduce
State 126 conflicts: 2 shift/reduce
State 127 conflicts: 2 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | CONSTANT
    3                   | STRING_LITERAL
    4                   | '(' expression ')'
    5                   | '[' ']'
    6                   | '[' array_list ']'

    7 postfix_expression: primary_expression
    8                   | array_expression
    9                   | postfix_expression TRANSPOSE
   10                   | postfix_expression NCTRANSPOSE

   11 index_expression: ':'
   12                 | expression

   13 index_expression_list: index_expression
   14                      | index_expression_list ',' index_expression

   15 array_expression: IDENTIFIER '(' index_expression_list ')'

   16 unary_expression: postfix_expression
   17                 | unary_operator postfix_expression

   18 unary_operator: '+'
   19               | '-'
   20               | '~'

   21 multiplicative_expression: unary_expression
   22                          | multiplicative_expression '*' unary_expression
   23                          | multiplicative_expression '/' unary_expression
   24                          | multiplicative_expression '\\' unary_expression
   25                          | multiplicative_expression '^' unary_expression
   26                          | multiplicative_expression ARRAYMUL unary_expression
   27                          | multiplicative_expression ARRAYDIV unary_expression
   28                          | multiplicative_expression ARRAYRDIV unary_expression
   29                          | multiplicative_expression ARRAYPOW unary_expression

   30 additive_expression: multiplicative_expression
   31                    | additive_expression '+' multiplicative_expression
   32                    | additive_expression '-' multiplicative_expression

   33 relational_expression: additive_expression
   34                      | relational_expression '<' additive_expression
   35                      | relational_expression '>' additive_expression
   36                      | relational_expression LE_OP additive_expression
   37                      | relational_expression GE_OP additive_expression

   38 equality_expression: relational_expression
   39                    | equality_expression EQ_OP relational_expression
   40                    | equality_expression NE_OP relational_expression

   41 and_expression: equality_expression
   42               | and_expression '&' equality_expression

   43 or_expression: and_expression
   44              | or_expression '|' and_expression

   45 expression: or_expression
   46           | expression ':' or_expression

   47 assignment_expression: postfix_expression '=' expression

   48 eostmt: ','
   49       | ';' CR
   50       | ';'
   51       | CR

   52 statement: global_statement
   53          | clear_statement
   54          | assignment_statement
   55          | expression_statement
   56          | selection_statement
   57          | iteration_statement
   58          | jump_statement

   59 statement_list: statement
   60               | statement_list statement

   61 identifier_list: IDENTIFIER
   62                | identifier_list IDENTIFIER

   63 global_statement: GLOBAL identifier_list eostmt

   64 clear_statement: CLEAR identifier_list eostmt

   65 expression_statement: eostmt
   66                     | expression eostmt

   67 assignment_statement: assignment_expression eostmt

   68 array_element: expression
   69              | expression_statement

   70 array_list: array_element
   71           | array_list array_element

   72 selection_statement: IF expression statement_list END eostmt
   73                    | IF expression statement_list ELSE statement_list END eostmt
   74                    | IF expression statement_list elseif_clause END eostmt
   75                    | IF expression statement_list elseif_clause ELSE statement_list END eostmt

   76 elseif_clause: ELSEIF expression statement_list
   77              | elseif_clause ELSEIF expression statement_list

   78 iteration_statement: WHILE expression statement_list END eostmt
   79                    | FOR IDENTIFIER '=' expression statement_list END eostmt
   80                    | FOR '(' IDENTIFIER '=' expression ')' statement_list END eostmt

   81 jump_statement: BREAK eostmt
   82               | RETURN eostmt

   83 translation_unit: statement_list
   84                 | FUNCTION function_declare eostmt statement_list

   85 func_ident_list: IDENTIFIER
   86                | func_ident_list ',' IDENTIFIER

   87 func_return_list: IDENTIFIER
   88                 | '[' func_ident_list ']'

   89 function_declare_lhs: IDENTIFIER
   90                     | IDENTIFIER '(' ')'
   91                     | IDENTIFIER '(' func_ident_list ')'

   92 function_declare: function_declare_lhs
   93                 | func_return_list '=' function_declare_lhs


Terminals, with rules where they appear

$end (0) 0
'&' (38) 42
'(' (40) 4 15 80 90 91
')' (41) 4 15 80 90 91
'*' (42) 22
'+' (43) 18 31
',' (44) 14 48 86
'-' (45) 19 32
'/' (47) 23
':' (58) 11 46
';' (59) 49 50
'<' (60) 34
'=' (61) 47 79 80 93
'>' (62) 35
'[' (91) 5 6 88
'\\' (92) 24
']' (93) 5 6 88
'^' (94) 25
'|' (124) 44
'~' (126) 20
error (256)
CONSTANT (258) 2
IDENTIFIER (259) 1 15 61 62 79 80 85 86 87 89 90 91
STRING_LITERAL (260) 3
ARRAYMUL (261) 26
ARRAYPOW (262) 29
ARRAYDIV (263) 27
ARRAYRDIV (264) 28
LE_OP (265) 36
GE_OP (266) 37
EQ_OP (267) 39
NE_OP (268) 40
IF (269) 72 73 74 75
ELSE (270) 73 75
ELSEIF (271) 76 77
WHILE (272) 78
FOR (273) 79 80
BREAK (274) 81
RETURN (275) 82
END (276) 72 73 74 75 78 79 80
FUNCTION (277) 84
TRANSPOSE (278) 9
NCTRANSPOSE (279) 10
CR (280) 49 51
GLOBAL (281) 63
CLEAR (282) 64


Nonterminals, with rules where they appear

$accept (47)
    on left: 0
primary_expression (48)
    on left: 1 2 3 4 5 6, on right: 7
postfix_expression (49)
    on left: 7 8 9 10, on right: 9 10 16 17 47
index_expression (50)
    on left: 11 12, on right: 13 14
index_expression_list (51)
    on left: 13 14, on right: 14 15
array_expression (52)
    on left: 15, on right: 8
unary_expression (53)
    on left: 16 17, on right: 21 22 23 24 25 26 27 28 29
unary_operator (54)
    on left: 18 19 20, on right: 17
multiplicative_expression (55)
    on left: 21 22 23 24 25 26 27 28 29, on right: 22 23 24 25 26 27
    28 29 30 31 32
additive_expression (56)
    on left: 30 31 32, on right: 31 32 33 34 35 36 37
relational_expression (57)
    on left: 33 34 35 36 37, on right: 34 35 36 37 38 39 40
equality_expression (58)
    on left: 38 39 40, on right: 39 40 41 42
and_expression (59)
    on left: 41 42, on right: 42 43 44
or_expression (60)
    on left: 43 44, on right: 44 45 46
expression (61)
    on left: 45 46, on right: 4 12 46 47 66 68 72 73 74 75 76 77 78
    79 80
assignment_expression (62)
    on left: 47, on right: 67
eostmt (63)
    on left: 48 49 50 51, on right: 63 64 65 66 67 72 73 74 75 78 79
    80 81 82 84
statement (64)
    on left: 52 53 54 55 56 57 58, on right: 59 60
statement_list (65)
    on left: 59 60, on right: 60 72 73 74 75 76 77 78 79 80 83 84
identifier_list (66)
    on left: 61 62, on right: 62 63 64
global_statement (67)
    on left: 63, on right: 52
clear_statement (68)
    on left: 64, on right: 53
expression_statement (69)
    on left: 65 66, on right: 55 69
assignment_statement (70)
    on left: 67, on right: 54
array_element (71)
    on left: 68 69, on right: 70 71
array_list (72)
    on left: 70 71, on right: 6 71
selection_statement (73)
    on left: 72 73 74 75, on right: 56
elseif_clause (74)
    on left: 76 77, on right: 74 75 77
iteration_statement (75)
    on left: 78 79 80, on right: 57
jump_statement (76)
    on left: 81 82, on right: 58
translation_unit (77)
    on left: 83 84, on right: 0
func_ident_list (78)
    on left: 85 86, on right: 86 88 91
func_return_list (79)
    on left: 87 88, on right: 93
function_declare_lhs (80)
    on left: 89 90 91, on right: 92 93
function_declare (81)
    on left: 92 93, on right: 84


State 0

    0 $accept: . translation_unit $end

    CONSTANT        shift, and go to state 1
    IDENTIFIER      shift, and go to state 2
    STRING_LITERAL  shift, and go to state 3
    IF              shift, and go to state 4
    WHILE           shift, and go to state 5
    FOR             shift, and go to state 6
    BREAK           shift, and go to state 7
    RETURN          shift, and go to state 8
    FUNCTION        shift, and go to state 9
    CR              shift, and go to state 10
    GLOBAL          shift, and go to state 11
    CLEAR           shift, and go to state 12
    '('             shift, and go to state 13
    '['             shift, and go to state 14
    ','             shift, and go to state 15
    '+'             shift, and go to state 16
    '-'             shift, and go to state 17
    '~'             shift, and go to state 18
    ';'             shift, and go to state 19

    primary_expression         go to state 20
    postfix_expression         go to state 21
    array_expression           go to state 22
    unary_expression           go to state 23
    unary_operator             go to state 24
    multiplicative_expression  go to state 25
    additive_expression        go to state 26
    relational_expression      go to state 27
    equality_expression        go to state 28
    and_expression             go to state 29
    or_expression              go to state 30
    expression                 go to state 31
    assignment_expression      go to state 32
    eostmt                     go to state 33
    statement                  go to state 34
    statement_list             go to state 35
    global_statement           go to state 36
    clear_statement            go to state 37
    expression_statement       go to state 38
    assignment_statement       go to state 39
    selection_statement        go to state 40
    iteration_statement        go to state 41
    jump_statement             go to state 42
    translation_unit           go to state 43


State 1

    2 primary_expression: CONSTANT .

    $default  reduce using rule 2 (primary_expression)


State 2

    1 primary_expression: IDENTIFIER .
   15 array_expression: IDENTIFIER . '(' index_expression_list ')'

    '('  shift, and go to state 44

    '('       [reduce using rule 1 (primary_expression)]
    $default  reduce using rule 1 (primary_expression)


State 3

    3 primary_expression: STRING_LITERAL .

    $default  reduce using rule 3 (primary_expression)


State 4

   72 selection_statement: IF . expression statement_list END eostmt
   73                    | IF . expression statement_list ELSE statement_list END eostmt
   74                    | IF . expression statement_list elseif_clause END eostmt
   75                    | IF . expression statement_list elseif_clause ELSE statement_list END eostmt

    CONSTANT        shift, and go to state 1
    IDENTIFIER      shift, and go to state 2
    STRING_LITERAL  shift, and go to state 3
    '('             shift, and go to state 13
    '['             shift, and go to state 14
    '+'             shift, and go to state 16
    '-'             shift, and go to state 17
    '~'             shift, and go to state 18

    primary_expression         go to state 20
    postfix_expression         go to state 45
    array_expression           go to state 22
    unary_expression           go to state 23
    unary_operator             go to state 24
    multiplicative_expression  go to state 25
    additive_expression        go to state 26
    relational_expression      go to state 27
    equality_expression        go to state 28
    and_expression             go to state 29
    or_expression              go to state 30
    expression                 go to state 46


State 5

   78 iteration_statement: WHILE . expression statement_list END eostmt

    CONSTANT        shift, and go to state 1
    IDENTIFIER      shift, and go to state 2
    STRING_LITERAL  shift, and go to state 3
    '('             shift, and go to state 13
    '['             shift, and go to state 14
    '+'             shift, and go to state 16
    '-'             shift, and go to state 17
    '~'             shift, and go to state 18

    primary_expression         go to state 20
    postfix_expression         go to state 45
    array_expression           go to state 22
    unary_expression           go to state 23
    unary_operator             go to state 24
    multiplicative_expression  go to state 25
    additive_expression        go to state 26
    relational_expression      go to state 27
    equality_expression        go to state 28
    and_expression             go to state 29
    or_expression              go to state 30
    expression                 go to state 47


State 6

   79 iteration_statement: FOR . IDENTIFIER '=' expression statement_list END eostmt
   80                    | FOR . '(' IDENTIFIER '=' expression ')' statement_list END eostmt

    IDENTIFIER  shift, and go to state 48
    '('         shift, and go to state 49


State 7

   81 jump_statement: BREAK . eostmt

    CR   shift, and go to state 10
    ','  shift, and go to state 15
    ';'  shift, and go to state 19

    eostmt  go to state 50


State 8

   82 jump_statement: RETURN . eostmt

    CR   shift, and go to state 10
    ','  shift, and go to state 15
    ';'  shift, and go to state 19

    eostmt  go to state 51


State 9

   84 translation_unit: FUNCTION . function_declare eostmt statement_list

    IDENTIFIER  shift, and go to state 52
    '['         shift, and go to state 53

    func_return_list      go to state 54
    function_declare_lhs  go to state 55
    function_declare      go to state 56


State 10

   51 eostmt: CR .

    $default  reduce using rule 51 (eostmt)


State 11

   63 global_statement: GLOBAL . identifier_list eostmt

    IDENTIFIER  shift, and go to state 57

    identifier_list  go to state 58


State 12

   64 clear_statement: CLEAR . identifier_list eostmt

    IDENTIFIER  shift, and go to state 57

    identifier_list  go to state 59


State 13

    4 primary_expression: '(' . expression ')'

    CONSTANT        shift, and go to state 1
    IDENTIFIER      shift, and go to state 2
    STRING_LITERAL  shift, and go to state 3
    '('             shift, and go to state 13
    '['             shift, and go to state 14
    '+'             shift, and go to state 16
    '-'             shift, and go to state 17
    '~'             shift, and go to state 18

    primary_expression         go to state 20
    postfix_expression         go to state 45
    array_expression           go to state 22
    unary_expression           go to state 23
    unary_operator             go to state 24
    multiplicative_expression  go to state 25
    additive_expression        go to state 26
    relational_expression      go to state 27
    equality_expression        go to state 28
    and_expression             go to state 29
    or_expression              go to state 30
    expression                 go to state 60


State 14

    5 primary_expression: '[' . ']'
    6                   | '[' . array_list ']'

    CONSTANT        shift, and go to state 1
    IDENTIFIER      shift, and go to state 2
    STRING_LITERAL  shift, and go to state 3
    CR              shift, and go to state 10
    '('             shift, and go to state 13
    '['             shift, and go to state 14
    ']'             shift, and go to state 61
    ','             shift, and go to state 15
    '+'             shift, and go to state 16
    '-'             shift, and go to state 17
    '~'             shift, and go to state 18
    ';'             shift, and go to state 19

    primary_expression         go to state 20
    postfix_expression         go to state 45
    array_expression           go to state 22
    unary_expression           go to state 23
    unary_operator             go to state 24
    multiplicative_expression  go to state 25
    additive_expression        go to state 26
    relational_expression      go to state 27
    equality_expression        go to state 28
    and_expression             go to state 29
    or_expression              go to state 30
    expression                 go to state 62
    eostmt                     go to state 33
    expression_statement       go to state 63
    array_element              go to state 64
    array_list                 go to state 65


State 15

   48 eostmt: ',' .

    $default  reduce using rule 48 (eostmt)


State 16

   18 unary_operator: '+' .

    $default  reduce using rule 18 (unary_operator)


State 17

   19 unary_operator: '-' .

    $default  reduce using rule 19 (unary_operator)


State 18

   20 unary_operator: '~' .

    $default  reduce using rule 20 (unary_operator)


State 19

   49 eostmt: ';' . CR
   50       | ';' .

    CR  shift, and go to state 66

    CR        [reduce using rule 50 (eostmt)]
    $default  reduce using rule 50 (eostmt)


State 20

    7 postfix_expression: primary_expression .

    $default  reduce using rule 7 (postfix_expression)


State 21

    9 postfix_expression: postfix_expression . TRANSPOSE
   10                   | postfix_expression . NCTRANSPOSE
   16 unary_expression: postfix_expression .
   47 assignment_expression: postfix_expression . '=' expression

    TRANSPOSE    shift, and go to state 67
    NCTRANSPOSE  shift, and go to state 68
    '='          shift, and go to state 69

    $default  reduce using rule 16 (unary_expression)


State 22

    8 postfix_expression: array_expression .

    $default  reduce using rule 8 (postfix_expression)


State 23

   21 multiplicative_expression: unary_expression .

    $default  reduce using rule 21 (multiplicative_expression)


State 24

   17 unary_expression: unary_operator . postfix_expression

    CONSTANT        shift, and go to state 1
    IDENTIFIER      shift, and go to state 2
    STRING_LITERAL  shift, and go to state 3
    '('             shift, and go to state 13
    '['             shift, and go to state 14

    primary_expression  go to state 20
    postfix_expression  go to state 70
    array_expression    go to state 22


State 25

   22 multiplicative_expression: multiplicative_expression . '*' unary_expression
   23                          | multiplicative_expression . '/' unary_expression
   24                          | multiplicative_expression . '\\' unary_expression
   25                          | multiplicative_expression . '^' unary_expression
   26                          | multiplicative_expression . ARRAYMUL unary_expression
   27                          | multiplicative_expression . ARRAYDIV unary_expression
   28                          | multiplicative_expression . ARRAYRDIV unary_expression
   29                          | multiplicative_expression . ARRAYPOW unary_expression
   30 additive_expression: multiplicative_expression .

    ARRAYMUL   shift, and go to state 71
    ARRAYPOW   shift, and go to state 72
    ARRAYDIV   shift, and go to state 73
    ARRAYRDIV  shift, and go to state 74
    '*'        shift, and go to state 75
    '/'        shift, and go to state 76
    '\\'       shift, and go to state 77
    '^'        shift, and go to state 78

    $default  reduce using rule 30 (additive_expression)


State 26

   31 additive_expression: additive_expression . '+' multiplicative_expression
   32                    | additive_expression . '-' multiplicative_expression
   33 relational_expression: additive_expression .

    '+'  shift, and go to state 79
    '-'  shift, and go to state 80

    '+'       [reduce using rule 33 (relational_expression)]
    '-'       [reduce using rule 33 (relational_expression)]
    $default  reduce using rule 33 (relational_expression)


State 27

   34 relational_expression: relational_expression . '<' additive_expression
   35                      | relational_expression . '>' additive_expression
   36                      | relational_expression . LE_OP additive_expression
   37                      | relational_expression . GE_OP additive_expression
   38 equality_expression: relational_expression .

    LE_OP  shift, and go to state 81
    GE_OP  shift, and go to state 82
    '<'    shift, and go to state 83
    '>'    shift, and go to state 84

    $default  reduce using rule 38 (equality_expression)


State 28

   39 equality_expression: equality_expression . EQ_OP relational_expression
   40                    | equality_expression . NE_OP relational_expression
   41 and_expression: equality_expression .

    EQ_OP  shift, and go to state 85
    NE_OP  shift, and go to state 86

    $default  reduce using rule 41 (and_expression)


State 29

   42 and_expression: and_expression . '&' equality_expression
   43 or_expression: and_expression .

    '&'  shift, and go to state 87

    $default  reduce using rule 43 (or_expression)


State 30

   44 or_expression: or_expression . '|' and_expression
   45 expression: or_expression .

    '|'  shift, and go to state 88

    $default  reduce using rule 45 (expression)


State 31

   46 expression: expression . ':' or_expression
   66 expression_statement: expression . eostmt

    CR   shift, and go to state 10
    ':'  shift, and go to state 89
    ','  shift, and go to state 15
    ';'  shift, and go to state 19

    eostmt  go to state 90


State 32

   67 assignment_statement: assignment_expression . eostmt

    CR   shift, and go to state 10
    ','  shift, and go to state 15
    ';'  shift, and go to state 19

    eostmt  go to state 91


State 33

   65 expression_statement: eostmt .

    $default  reduce using rule 65 (expression_statement)


State 34

   59 statement_list: statement .

    $default  reduce using rule 59 (statement_list)


State 35

   60 statement_list: statement_list . statement
   83 translation_unit: statement_list .

    CONSTANT        shift, and go to state 1
    IDENTIFIER      shift, and go to state 2
    STRING_LITERAL  shift, and go to state 3
    IF              shift, and go to state 4
    WHILE           shift, and go to state 5
    FOR             shift, and go to state 6
    BREAK           shift, and go to state 7
    RETURN          shift, and go to state 8
    CR              shift, and go to state 10
    GLOBAL          shift, and go to state 11
    CLEAR           shift, and go to state 12
    '('             shift, and go to state 13
    '['             shift, and go to state 14
    ','             shift, and go to state 15
    '+'             shift, and go to state 16
    '-'             shift, and go to state 17
    '~'             shift, and go to state 18
    ';'             shift, and go to state 19

    $default  reduce using rule 83 (translation_unit)

    primary_expression         go to state 20
    postfix_expression         go to state 21
    array_expression           go to state 22
    unary_expression           go to state 23
    unary_operator             go to state 24
    multiplicative_expression  go to state 25
    additive_expression        go to state 26
    relational_expression      go to state 27
    equality_expression        go to state 28
    and_expression             go to state 29
    or_expression              go to state 30
    expression                 go to state 31
    assignment_expression      go to state 32
    eostmt                     go to state 33
    statement                  go to state 92
    global_statement           go to state 36
    clear_statement            go to state 37
    expression_statement       go to state 38
    assignment_statement       go to state 39
    selection_statement        go to state 40
    iteration_statement        go to state 41
    jump_statement             go to state 42


State 36

   52 statement: global_statement .

    $default  reduce using rule 52 (statement)


State 37

   53 statement: clear_statement .

    $default  reduce using rule 53 (statement)


State 38

   55 statement: expression_statement .

    $default  reduce using rule 55 (statement)


State 39

   54 statement: assignment_statement .

    $default  reduce using rule 54 (statement)


State 40

   56 statement: selection_statement .

    $default  reduce using rule 56 (statement)


State 41

   57 statement: iteration_statement .

    $default  reduce using rule 57 (statement)


State 42

   58 statement: jump_statement .

    $default  reduce using rule 58 (statement)


State 43

    0 $accept: translation_unit . $end

    $end  shift, and go to state 93


State 44

   15 array_expression: IDENTIFIER '(' . index_expression_list ')'

    CONSTANT        shift, and go to state 1
    IDENTIFIER      shift, and go to state 2
    STRING_LITERAL  shift, and go to state 3
    '('             shift, and go to state 13
    '['             shift, and go to state 14
    ':'             shift, and go to state 94
    '+'             shift, and go to state 16
    '-'             shift, and go to state 17
    '~'             shift, and go to state 18

    primary_expression         go to state 20
    postfix_expression         go to state 45
    index_expression           go to state 95
    index_expression_list      go to state 96
    array_expression           go to state 22
    unary_expression           go to state 23
    unary_operator             go to state 24
    multiplicative_expression  go to state 25
    additive_expression        go to state 26
    relational_expression      go to state 27
    equality_expression        go to state 28
    and_expression             go to state 29
    or_expression              go to state 30
    expression                 go to state 97


State 45

    9 postfix_expression: postfix_expression . TRANSPOSE
   10                   | postfix_expression . NCTRANSPOSE
   16 unary_expression: postfix_expression .

    TRANSPOSE    shift, and go to state 67
    NCTRANSPOSE  shift, and go to state 68

    $default  reduce using rule 16 (unary_expression)


State 46

   46 expression: expression . ':' or_expression
   72 selection_statement: IF expression . statement_list END eostmt
   73                    | IF expression . statement_list ELSE statement_list END eostmt
   74                    | IF expression . statement_list elseif_clause END eostmt
   75                    | IF expression . statement_list elseif_clause ELSE statement_list END eostmt

    CONSTANT        shift, and go to state 1
    IDENTIFIER      shift, and go to state 2
    STRING_LITERAL  shift, and go to state 3
    IF              shift, and go to state 4
    WHILE           shift, and go to state 5
    FOR             shift, and go to state 6
    BREAK           shift, and go to state 7
    RETURN          shift, and go to state 8
    CR              shift, and go to state 10
    GLOBAL          shift, and go to state 11
    CLEAR           shift, and go to state 12
    '('             shift, and go to state 13
    '['             shift, and go to state 14
    ':'             shift, and go to state 89
    ','             shift, and go to state 15
    '+'             shift, and go to state 16
    '-'             shift, and go to state 17
    '~'             shift, and go to state 18
    ';'             shift, and go to state 19

    primary_expression         go to state 20
    postfix_expression         go to state 21
    array_expression           go to state 22
    unary_expression           go to state 23
    unary_operator             go to state 24
    multiplicative_expression  go to state 25
    additive_expression        go to state 26
    relational_expression      go to state 27
    equality_expression        go to state 28
    and_expression             go to state 29
    or_expression              go to state 30
    expression                 go to state 31
    assignment_expression      go to state 32
    eostmt                     go to state 33
    statement                  go to state 34
    statement_list             go to state 98
    global_statement           go to state 36
    clear_statement            go to state 37
    expression_statement       go to state 38
    assignment_statement       go to state 39
    selection_statement        go to state 40
    iteration_statement        go to state 41
    jump_statement             go to state 42


State 47

   46 expression: expression . ':' or_expression
   78 iteration_statement: WHILE expression . statement_list END eostmt
